<resources>
    <string name="app_name">EventfulMB</string>
    <string name="message_button">Message Button</string>
    <string name="message">Message</string>
    <string name="simulation_button">Simulation Button</string>
    <string name="simulation">Simulation</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="update_frequency">Update frequency:</string>
    <string name="save">Save</string>
    <string name="save_button">Save Button</string>
    <string name="location">Location:</string>
    <string name="category">Category</string>
    <string name="set_hour">Set hours (0 - 23)</string>
    <string name="set_minutes">Set minutes (0 - 59)</string>
    <string name="set_seconds">Set seconds (0 - 59)</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="flash_on">⚡</string>
    <string name="flash_auto">A</string>
    <string name="flash_off">⚡off</string>
    <string name="rotate_camera">⟲</string>
    <string name="distance_button">Distance Button</string>
    <string name="distance">Distance</string>
    <string name="meters">m</string>
    <string name="nearby_institutions"><b>Nearby Institutions</b> in the radius of</string>
    <string name="enable">Enable</string>
    <string name="send">Send</string>
    <string name="send_button">Send Button</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="enter_location">Enter Location</string>
    <string name="insert_range">Range %1$s</string>
    <string name="default_category">(ex. min - max)</string>
    <string name="people_range">(ex. 1 - 200)</string>
    <string name="temperature_range">(ex. -50 - 50)</string>
    <string name="default_location">Not determined location</string>
</resources>