<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageInput"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:hint="@string/message"
        app:boxStrokeColor="@color/primaryColorLight"
        app:endIconDrawable="@drawable/baseline_cancel_24"
        app:endIconMode="custom"
        app:endIconTint="@color/primaryColorLight"
        app:hintTextColor="@color/primaryColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        app:startIconDrawable="@drawable/baseline_message_24"
        app:startIconTint="@color/primaryColorLight">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:hint="@string/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageInput"
        app:boxStrokeColor="@color/primaryColorLight"
        app:hintTextColor="@color/primaryColorLight"
        app:endIconTint="@color/primaryColorLight">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/categories"
            app:simpleItemSelectedColor="@color/primaryContainerColorLight"
            app:simpleItemSelectedRippleColor="@color/primaryContainerColorLight"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/saveButton"
        style="@style/FABStyleExtended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/save_button"
        android:text="@string/save"
        android:textColor="@color/primaryColorLight"
        app:icon="@drawable/baseline_save_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:maxImageSize="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>